istio/demo_current2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"demo-deployment-v2","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"demo-app"}},"template":{"metadata":{"labels":{"app":"demo-app","version":"v2"}},"spec":{"containers":[{"image":"thara0402/k8sdemo:0.11.0","livenessProbe":{"failureThreshold":3,"httpGet":{"path":"/","port":80},"initialDelaySeconds":10,"periodSeconds":10,"timeoutSeconds":1},"name":"k8sdemo","ports":[{"containerPort" [...]
  creationTimestamp: 2018-11-22T01:52:12Z
  generation: 1
  name: demo-deployment-v2
  namespace: default
  resourceVersion: "703647"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/demo-deployment-v2
  uid: 3ab3fbf8-edf9-11e8-a44d-ce34d05dd9aa
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: demo-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo-app
        version: v2
    spec:
      containers:
      - image: thara0402/k8sdemo:0.11.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: k8sdemo
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: 2018-11-22T01:52:38Z
    lastUpdateTime: 2018-11-22T01:52:38Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2018-11-22T01:52:12Z
    lastUpdateTime: 2018-11-22T01:52:38Z
    message: ReplicaSet "demo-deployment-v2-5996887846" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
